--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtex-fork",
-  "version": "2.37.4",
+  "version": "2.53.0",
   "description": "The platform for e-commerce apps",
   "main": "lib/index.js",
   "bin": "lib/cli.js",
@@ -45,13 +45,13 @@
     "url": "https://github.com/vtex/toolbelt/issues"
   },
   "dependencies": {
-    "@vtex/api": "^0.44.0",
+    "@vtex/api": "^2.3.0",
     "any-promise": "^1.3.0",
-    "babel-eslint": "^8.2.2",
+    "async-retry": "^1.2.3",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.2",
     "child-process-es6-promise": "^1.2.0",
-    "chokidar": "^2.0.4",
+    "chokidar": "^2.1.2",
     "clear-module": "^3.0.0",
     "cli-table": "^0.3.1",
     "cli-table2": "^0.2.0",
@@ -59,18 +59,14 @@
     "configstore": "^4.0.0",
     "debounce": "^1.0.0",
     "diff": "^3.2.0",
-    "eslint": "^5.0.1",
-    "eslint-config-vtex": "^8.0.0",
-    "eslint-config-vtex-react": "^3.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^7.0.0",
+    "enquirer": "^2.3.0",
     "eventsource": "^1.0.1",
     "extendable-error": "^0.1.5",
-    "findhelp": "^1.0.4",
+    "findhelp": "^1.1.0",
     "fs-extra": "^7.0.0",
     "get-stream": "^4.0.0",
     "globby": "^8.0.1",
-    "inquirer": "^6.0.0",
+    "js-yaml": "^3.13.0",
     "jsonwebtoken": "^8.2.0",
     "latest-version": "^4.0.0",
     "moment": "^2.21.0",
@@ -86,10 +82,10 @@
     "semver-diff": "^2.1.0",
     "unzip-stream": "^0.3.0",
     "update-notifier": "^2.3.0",
-    "vtex-auto-login": "^0.1.4",
     "winston": "^2.4.0",
     "ws": "^6.0.0",
-    "yarn": "^1.9.4"
+    "yarn": "^1.9.4",
+    "vtex-auto-login": "^0.1.9"
   },
   "preferGlobal": true,
   "devDependencies": {
@@ -98,7 +94,6 @@
     "@types/chokidar": "^1.7.5",
     "@types/configstore": "^2.1.0",
     "@types/fs-extra": "^5.0.1",
-    "@types/inquirer": "^0.0.43",
     "@types/node": "^10.1.1",
     "@types/ramda": "types/npm-ramda#dist",
     "@types/semver-diff": "^2.1.0",
